# crustpass

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  app_settings.json  readme.MD
.github/files/: build.sh
src/: app_settings.rs  auth.rs  authentication.rs  configuration.rs  lib.rs  main.rs  physical.rs  settings.rs
src/enc/: aes256.rs
src/encryption/: aes256.rs  mod.rs
src/physical/: libsql_store.rs  mod.rs
src/routers/: auth.rs  authentication.rs  axum.rs  logging.rs  mod.rs  secret.rs
src/services/: kv.rs
tests/: aes.rs
