[package]
name = "secretsquirrel"
version = "1.1.1"
edition = "2021"
rust-version = "1.84.1"

[dependencies]
libsql = { version = "0.6.0", features = ["encryption"] }
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
aes = "0.8.4"
cbc = "0.1.2"
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
